Attempt 2 to fix no-content vertical scroll bar on mobile

--- a/guipt/styles.css
+++ b/guipt/styles.css
@@ -80,6 +80,7 @@ body {
         flex-direction: column;
         flex-grow: 1;
         justify-content: space-between;
+        min-height: calc(100vh - 276px);
     }
 
         #output {
@@ -127,6 +128,10 @@ body {
             #instructions {
                 font-size: 15px;
             }
+
+    #bottom {
+        min-height: calc(100vh - 228px);
+    }
 
         #output {
             font-size: 18px;
